test/compile_errors/err_no_std_missing_panic_handler.w
//! args: --no-std
//! expect-check-fail: no_std requires @[panic_handler]

@[entry]
fn start -> i32: 0
